methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value seenBaggle
  seenBaggle=false
  ^MethodsReturning:6: error: not found: value seenBaggle
      seenBaggle=true
      ^MethodsReturning:9: error: not found: value seenBaggle
  return seenBaggle
         ^