methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  seenBaggle=false
  for (i <- 1 to 6) {
    forward();
    if (isOverBaggle()) {
      seenBaggle=true
    }
  }
  return seenBaggle
}